# claude-chat-code

./: AGENTS.md  Cargo.toml  README.ja.md  README.md  _config.yml  build.rs
issue-notes/: 1.md  3.md  5.md  6.md
src/: app.rs  build.rs  clipboard.rs  config.rs  logger.rs  main.rs  paths.rs  pipeline.rs  updater.rs  watcher.rs
src/fs/: archive.rs  backup.rs  extract.rs  mod.rs  ops.rs
src/tests/: mod.rs  test_app.rs  test_config.rs  test_fs_archive.rs  test_fs_backup.rs  test_fs_extract.rs  test_fs_ops.rs  test_main.rs  test_paths.rs  test_updater.rs  test_watcher.rs
src/ui/: age.rs  dialog.rs  layout.rs  mod.rs  panes.rs  theme.rs
