[package]
name = "claude-chat-code"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude-chat-code"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
chrono = "0.4"
zip = "8"
fs_extra = "1"
walkdir = "2"
filetime = "0.2"
toml = "1.0"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
arboard = "3"
clap = "4.6.0"

[dev-dependencies]
tempfile = "3"
zip = "8"
